--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ html {
   color: #333333;
 }
 header {
-  background-image: url(../img/layer6.png);
+  background-image: url(../img/Layer6.png);
   position: relative;
   height: 296px;
   background-attachment: fixed;
